--- a/BabyDiary/app/src/main/res/layout/activity_login.xml
+++ b/BabyDiary/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
                 <EditText
                     android:id="@+id/login_username_et"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
 
                     android:background="#50000000"
                     android:ems="10"
@@ -96,7 +96,7 @@
                 <EditText
                     android:id="@+id/login_password_et"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:background="#50000000"
                     android:ems="10"
                     android:hint="Jelszó"
@@ -174,6 +174,7 @@
                     android:id="@+id/logintv4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:text="Még nem regisztráltál?"
                     android:textColor="@android:color/white"
