--- a/BabyDiary/app/src/main/res/layout/activity_reg.xml
+++ b/BabyDiary/app/src/main/res/layout/activity_reg.xml
@@ -24,6 +24,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="REGISZTRÁCIÓ"
@@ -31,6 +32,13 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -183,6 +191,6 @@
                 android:textAlignment="center"
                 android:textColor="@android:color/white" />
         </LinearLayout>
-
+    </LinearLayout>
     </LinearLayout>
 </ScrollView>
