--- a/BabyDiary/app/src/main/res/layout/activity_todo.xml
+++ b/BabyDiary/app/src/main/res/layout/activity_todo.xml
@@ -116,7 +116,7 @@
                     android:text="Dátum:"
                     android:textColor="@android:color/white" />
 
-                <TextView
+                <EditText
                     android:id="@+id/todo_et_datum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -124,7 +124,10 @@
                     android:textColor="@android:color/white"
                     android:background="#50000000"
                     android:clickable="true"
-                    android:onClick="onclick" />
+                    android:editable="false"
+                    android:focusable="false"
+                    android:longClickable="false"
+                    android:onClick="onClick" />
             </LinearLayout>
         </LinearLayout>
 
@@ -149,7 +152,7 @@
                     android:text="Idő:"
                     android:textColor="@android:color/white" />
 
-                <TextView
+                <EditText
                     android:id="@+id/todo_et_ido"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -157,7 +160,7 @@
                     android:textColor="@android:color/white"
                     android:background="#50000000"
                     android:clickable="true"
-                    android:onClick="onclick" />
+                    android:onClick="onClick" />
             </LinearLayout>
         </LinearLayout>
 
