--- a/BabyDiary/app/src/main/res/layout/activity_todo.xml
+++ b/BabyDiary/app/src/main/res/layout/activity_todo.xml
@@ -160,6 +160,9 @@
                     android:textColor="@android:color/white"
                     android:background="#50000000"
                     android:clickable="true"
+                    android:editable="false"
+                    android:focusable="false"
+                    android:longClickable="false"
                     android:onClick="onClick" />
             </LinearLayout>
         </LinearLayout>
